# bilibili-dl

./: .gitignore  Cargo.toml  Makefile  README.md  api.c  api.h  api.json  bilibili-dl.drawio  cookie_file.txt.bak  download.c  ffmpegtest.c  gstreamertest.c  login.c  login.h  main.c  options.h
cjson/: Makefile
include/: api.h  download.h  fetchstream.h
lib/: Makefile
src/: api.c  apitable.c  command_parser.rs  data_model.rs  download.c  downloader.rs  draft.txt  fetchstream.c  login.c  main.c  main.rs  main.rs.bak  multimedia_processor.rs  object_parser.rs  resource_selector.rs  target_parser.rs
