[package]
name = "bilibili-dl"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["json","blocking", "cookies"] }
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
serde = { version = "1.0", features = ["derive"] }
reqwest_cookie_store = "0.6.0"
lazy_static = "1.4"
serde_json = "1.0"
